# django-rule-engine

./: EXAMPLES.md  INDEX.md  MIGRATION_GUIDE.md  PUBLISHING.md  README.md  RELEASE_v1.0.0.md  VISUAL_DEMO.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-to-pypi.yml  test.yml
examples/: examples.py
src/django_rule_engine/fields/: setup.sh
