[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-rule-engine"
version = "1.0.0"
description = "Django field and widget for rule-engine with visual editor"
readme = "README.md"
authors = [
    {name = "IFRN", email = ""},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "rule-engine", "rules", "validation", "field", "widget"]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "rule-engine>=4.0",
    "django-json-widget>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/ifrn/ava"
Documentation = "https://github.com/ifrn/ava/tree/main/integration/django_rule_engine"
Repository = "https://github.com/ifrn/ava"
Issues = "https://github.com/ifrn/ava/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
django_rule_engine = [
    "static/**/*",
    "templates/**/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["migrations"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "venv",
    "build",
    "dist",
]
extend-ignore = ["E203", "W503"]
